force-app/main/default/objects/ApprovalLevelForForms__c/ApprovalLevelForForms__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Approval Admin Setup</label>
</CustomObject>