force-app/main/default/objects/ApprovalLevelForForms__c/fields/Care_Plan_Approval_Level_Count__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Approval_Level_Count__c</fullName>
    <label>Care Plan Approval Level Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>