force-app/main/default/objects/ApprovalLevelForForms__c/fields/Lab_Order_Approval_Level_Count__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Approval_Level_Count__c</fullName>
    <label>Lab Order Approval Level Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>