force-app/main/default/objects/ApprovalLevelForForms__c/fields/Maximum_Level_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Level_For_Approval__c</fullName>
    <label>Maximum Level For Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>