force-app/main/default/objects/ApprovalLevelForForms__c/fields/Prescription_Approval_Level_Count__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Approval_Level_Count__c</fullName>
    <label>Prescription Approval Level Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>